<resources>
    <string name="app_name">My Braziliex App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_price_info">Ultimo Preço:</string>
    <string name="volume_24h">Volume (24h):</string>
    <string name="price_24h">Preço (24h):</string>
    <string name="trade_history_header_price">Preço (R$)</string>
    <string name="trade_history_header_qtde">Qtde</string>
    <string name="trade_history_header_total">Total (R$)</string>
    <string name="title_sell_orders">Ordens de venda</string>
    <string name="title_estime_balance">Balanço estimado</string>
    <string name="buy_orders">Ordens de Compra</string>
    <string name="bt_new">NOVO SALDO</string>
    <string name="coin">Moeda</string>
    <string name="amount">Quantidade</string>
    <string name="cancel">cancelar</string>
    <string name="save">salvar</string>
</resources>
