<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/trd_hist_header_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coin"
        android:gravity="center|top"
        android:textStyle="bold"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/trd_hist_header_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade_history_header_qtde"
        android:gravity="center|top"
        android:textStyle="bold"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/trd_hist_header_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade_history_header_total"
        android:gravity="center|top"
        android:textStyle="bold"
        android:layout_weight="1"/>

</LinearLayout>