<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pad_content_list_ticker"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_header_ticker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_edges"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_minimun">

            <TextView
                android:id="@+id/tv_info_last_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_price_info"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_value_last_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 43.853,12"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_info_last_price"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_info_vol_24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_24h"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/mrg_top_card_info_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_last_price"/>

            <TextView
                android:id="@+id/tv_value_quote_vol24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 213.853,12"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_info_vol_24h"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_value_base_vol24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13,12 XRP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_value_quote_vol24h" />

            <TextView
                android:id="@+id/tv_info_price_24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_24h"
                android:layout_marginTop="@dimen/mrg_top_card_info_detail"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_value_base_vol24h"/>

            <TextView
                android:id="@+id/tv_value_highest_bid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 213.853,12"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_info_price_24h"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_value_lowest_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 13,12"
                app:layout_constraintStart_toStartOf="@id/tv_value_highest_bid"
                app:layout_constraintTop_toBottomOf="@id/tv_value_highest_bid" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_trade_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mrg_top_order_history"
        app:layout_constraintTop_toBottomOf="@id/card_header_ticker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/drawer_view_header"
                android:id="@+id/order_history_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_orderhistory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_recycler_order_history" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_order_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@id/nsv_trade_history"
        app:layout_constraintEnd_toEndOf="@id/nsv_trade_history"
        app:layout_constraintBottom_toBottomOf="@id/nsv_trade_history"
        app:layout_constraintTop_toTopOf="@id/nsv_trade_history"/>

</androidx.constraintlayout.widget.ConstraintLayout>